Updated QuizPanel, Obfuscator